# md5mobile

./: .gitignore  Cargo.toml  README.md
md5decoder/: CMakeLists.txt  cfg.cpp  cfg.h  compute_cl.h  decoder.cpp  decoder.h  dm.cfg  dm.cpp  kernel.cpp  kernel.h  kernel2header.sh
md5decoder/kernels/: compute.cl
mi/: Cargo.toml
mi/script/: mca.py  merge.py  merged.csv
mi/src/: main.rs  mca.rs  year.rs
mm/: Cargo.toml  README.md
mm-c/: Makefile  decoder.c  decoder.h  md5_hash.c  md5_hash.h  mm.c
mm-cuda/: mm.cu  mm.sln  mm.vcxproj
mm-opencl/: CMakeLists.txt  compute.cpp  compute.h  compute_cl.h  decoder.cpp  decoder.h  devices.h  kernel2header.sh  mm.cpp  mm.h  platforms.h  shader.sh
mm-opencl/kernels/: compute.cl
mm-vulkan/: CMakeLists.txt  compute.spv  decoder.cpp  mm.cpp
mm-wasm/: Cargo.toml  build.sh  index.html  wasm.js  worker.js
mm-wasm-c/: Makefile  decoder.c  decoder.h  md5_hash.c  md5_hash.h  mm.c
mm-wasm/mm-wasm/: build.sh
mm-wasm/mm-wasm/src/: lib.rs
mm-wasm/src/: decoder.rs  lib.rs
mm/src/: main.rs
mmserver/: Cargo.toml  README.md  test.py
mmserver/src/: decoder.rs  main.rs
src/: main.rs
