[package]
name = "mmserver"
version = "0.2.0"
authors = ["herman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
md5 = "0.6.1"
buffered-reader = "0.9.0"
byteorder = "1.3.2"
rand = "0.7.0"
hex = "0.3.2"
num_cpus = "1.10.1"