[package]
name = "mmserver"
version = "0.2.0"
authors = ["herman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
md5 = "0.7.0"
buffered-reader = "1.2.0"
byteorder = "1.4.3"
rand = "0.8.5"
hex = "0.4.3"
num_cpus = "1.15.0"